--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "webrtc-adapter": "^9.0.1"
+    "recordrtc": "^5.6.2",
+    "webrtc-adapter": "^9.0.1",
+    "whammy": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
